# word_count2

./: .gitignore  CMakeLists.txt  valgrind.xml
data_in/: file.txt
data_in/nested_files/: data1.txt
data_in/nested_files/nested_files_2/: data1.txt  data2.txt
data_out/: result_by_name.txt  result_by_number.txt
inc/: read_write.hpp  sort.hpp  t_queue.h  time.hpp
lib/: read_write.cpp  sort.cpp
src/: main.cpp
